// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`High Order Component should render an animation 1`] = `
<span
  style={
    Object {
      "animation": "
                UNeSH 1s ease 0s 1 normal
                none running
              ",
      "backfaceVisibility": "visible",
      "display": "inline-block",
    }
  }
/>
`;

exports[`High Order Component should render the children with the props 1`] = `
<span
  style={
    Object {
      "animation": "
                UNeSH 2s ease 0s 1 normal
                none running
              ",
      "backfaceVisibility": "visible",
      "display": "inline-block",
    }
  }
>
  <h1>
    Hello World!
  </h1>
</span>
`;

exports[`renders the animation component 1`] = `
<span
  style={
    Object {
      "animation": "
                bGJZDZ 1s ease 0s 1 normal
                none running
              ",
      "backfaceVisibility": "visible",
      "display": "inline-block",
    }
  }
/>
`;

exports[`renders the animation component with \`block\` props 1`] = `
<div
  style={
    Object {
      "animation": "
                bGJZDZ 1s ease 0s 1 normal
                none running
              ",
      "backfaceVisibility": "visible",
      "display": "block",
    }
  }
>
  <h1>
    Hello World!
  </h1>
</div>
`;

exports[`renders the animation component with props 1`] = `
<span
  style={
    Object {
      "animation": "
                bGJZDZ 2s ease 4s 1 reverse
                none running
              ",
      "backfaceVisibility": "visible",
      "display": "inline-block",
    }
  }
>
  <h1>
    Hello World!
  </h1>
</span>
`;
